--- a/Website/package.json
+++ b/Website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websitelaptop",
+  "name": "websiteNoiThat",
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
@@ -10,25 +10,31 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dateformat": "^2.2.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^7.3.5",
     "multer": "^1.4.5-lts.1",
+    "paypal-rest-sdk": "^1.8.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/dateformat": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/fs-extra": "^9.0.13",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.10",
+    "@types/paypal-rest-sdk": "^1.7.6",
     "fs-extra": "^11.1.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
